--- a/src/options/index.html
+++ b/src/options/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Twitter TOC - Settings</title>
+  <title>X & Twitter Article TOC - Settings</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Twitter TOC Settings</h1>
+      <h1>X & Twitter Article TOC Settings</h1>
     </header>
 
     <main>
@@ -66,8 +66,8 @@
       <section class="settings-section">
         <h2>About</h2>
         <div class="about-info">
-          <p>Version: <span id="version">1.0.0</span></p>
-          <p>Twitter TOC - Table of Contents for Twitter Articles</p>
+          <p>Version: <span id="version">0.1.0</span></p>
+          <p>X & Twitter Article TOC - Table of Contents for X/Twitter Articles</p>
         </div>
       </section>
     </main>
